log~
fib.java:13: error: illegal start of expression
					if ((x & 1) != 0)) {
					                 ^
1 error
fib.java:13: error: illegal start of expression
					if ((x & 1) != 0)) {
					                 ^
1 error
fib.java:13: error: illegal start of expression
					if ((x & 1) != 0)) {
					                 ^
1 error
struct.java:43: error: illegal start of expression
		if ((R.MICROSOFT) != 0)) {
		                       ^
struct.java:47: error: 'else' without 'if'
		else {
		^
2 errors
struct.java:43: error: illegal start of expression
		if ((R.MICROSOFT) != 0)) {
		                       ^
struct.java:47: error: 'else' without 'if'
		else {
		^
2 errors
